tests/fail/expr/macro.rs
fn main() {
    one_assert::assert!(dbg!(1));
}
