tests/fail/expr/macro.stderr
error[E0308]: mismatched types
 --> tests/fail/expr/macro.rs:2:25
  |
2 |     one_assert::assert!(dbg!(1));
  |                         ^^^^^^^ expected `bool`, found integer
  |
  = note: this error originates in the macro `dbg` (in Nightly builds, run with -Z macro-backtrace for more info)
